# AMDGPU-Master

./: README.md
amdgpu_master/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  treeview.cpp  treeview.h
rootfs/include/libhw/: dmi.h  gpu.h  hardwareinfo.h  hwmon.h  pci.h  scsi.h  status.h
rootfs/include/libhw/gpu/: amd_bios.h  amd_encoderdecoder.h  amd_ip.h  amd_mem.h  amd_power.h  amdgpu.h  libdrm.h  monitor.h
rootfs/include/libhw/gpu/amdgpu/: atombios.h  dc_dp_types.h  dm_services_types.h  hwmgr.h  pptable.h  pptable_v1_0.h
rootfs/lib/: libdrm.so.2.4.0  libdrm_amdgpu.so.1.0.0  libdrm_intel.so.1.0.0  libdrm_nouveau.so.2.0.0  libdrm_radeon.so.1.0.1
rootfs/lib/pkgconfig/: libdrm.pc  libdrm_amdgpu.pc  libdrm_intel.pc  libdrm_nouveau.pc  libdrm_radeon.pc
